
- (Feb 12 2009) Romain Bondue extended Markus Moeller fix from Feb 8, based on
  a previous (uncommitted) patch by Erik Brossler. It improves
  libssh2_channel_write_ex in blocking situations when the socket is set non-
  blocking.

- (Feb 8 2009) Markus Moeller fixed a flaw in libssh2_channel_write_ex() that
  would occur on EAGAIN situations.

Version 1.0 (December 26 2008)
------------------------------

- (Dec 20 2008) Based on Alexander Lamaison's patch, there's now a new
  function called libssh2_sftp_tell64() that returns the 64 bit file offset,
  as the existing libssh2_sftp_tell() only returns a size_t.

- (Dec 18 2008) Markus Moeller fixed the issue also reported by Alexander
  Lamaison which caused SFTP reads with large buffers to fail.

- Several flaws were fixed that prevented at least SFTP to work reliably

- Vlad Grachov brought the new function called
  libssh2_session_block_directions() which returns a bitmask for what
  directions the connection blocks. It is to be used applications that use
  non-blocking sockets and when a libssh2 function returns
  LIBSSH2_ERROR_EAGAIN this function can be used to figure out in which
  direction the socket would block and thus it can wait for the socket to
  again be ready for communication in that direction before it calls libssh2
  again.

- Vincent Jaulin brought the new libssh2_channel_request_pty_size_ex()
  function.

- Carlo Bramini fixed the build for msys+mingw. Bug #1943976.

- Neil Gierman provided improved Visual Studio 2008 code in bug #1946268

- Bug #1862727 fixed libssh2_poll() to work on windows (by defining
  HAVE_SELECT).

- Based on bug #1815692, we introduce libssh2_sftp_seek64() that allows
  seeking beyond the 2GB margin even on 32bit machines.

- Based on a patch in bug #1878059 by Steven Ayre libssh2 now parses >2GB file
  sizes when downloading SCP files.

- Bug #2064371 pointed out that the SSH2 banner may not use dash
  ('-'). Reported by Bjorn Stenborg.
